--- a/content/《ebpf&Cilium》/content/toy-proxy/example/.vscode/settings.json
+++ b/content/《ebpf&Cilium》/content/toy-proxy/example/.vscode/settings.json
@@ -4,6 +4,7 @@
         "cstdarg": "c",
         "iostream": "c",
         "streambuf": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "bpf.h": "c"
     }
 }
